# cross-sectional-xgboost

./: .env.example  .gitignore  README.md  data_providers.py  main.py  pyproject.toml
cache/: us_daily_AAPL_20201227_20251226.parquet  us_daily_MSFT_20201227_20251226.parquet
config/: cn.yml  config.cn.yml  config.hk.yml  config.us.yml  config.yml  hk.yml  hk_selected__baseline.yml  hk_selected__elasticnet_a0.1_l0.5.yml  hk_selected__ridge_a1.yml  hk_selected__xgb_ranker_pairwise.yml  hk_selected__xgb_regressor.yml
docs/: README.md  cli.md  config.md  cookbook.md  dev.md  full_function.md  hk_stock_rqdata_api_manual.md  index.md  metrics.md  outputs.md  providers.md  troubleshooting.md
project_tools/: fetch_index_components.py  verify_tushare_tokens.py
scripts/: package_zip.sh
src/csml/: backtest.py  cli.py  pipeline.py  sharpe_stats.py  split.py  transform.py
src/csml/project_tools/: alloc.py  build_hk_connect_universe.py  holdings.py  linear_sweep.py  run_grid.py  summarize_runs.py
src/csxgb/: backtest.py  cli.py  data_providers.py  metrics.py  pipeline.py  portfolio.py
src/csxgb/config/: default.yml  hk.yml  us.yml
src/csxgb/project_tools/: alloc.py  build_hk_connect_universe.py  fetch_index_components.py  holdings.py  run_grid.py  summarize_runs.py  symbols.py
tests/: test_alloc.py  test_backtest.py  test_cli.py  test_data_providers_cache.py  test_holdings_errors.py  test_holdings_live.py  test_linear_sweep.py  test_metrics.py  test_pipeline_date_slices.py  test_pipeline_e2e.py  test_pipeline_filters.py  test_pipeline_leakage_warning.py  test_pipeline_validation.py  test_provider_integration.py  test_run_grid.py  test_sharpe_stats.py  test_split.py  test_summarize_runs.py  test_symbol_alias.py  test_universe_tools.py  test_walk_forward.py
